-- This is a dummy cabal project file
-- for setting up required dependencies
-- use "cabal install"
name:                ProjectEuler-Javran
version:             0.1.0.0
synopsis:            Javran's Project Euler Solutions Written in Haskell
homepage:            https://github.com/Javran/Project-Euler
license:             MIT
license-file:        LICENSE
author:              Javran Cheng
maintainer:          Javran.c@gmail.com
build-type:          Simple
extra-source-files:  README.md
data-files:          data/*.txt
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ProjectEuler.Javran
  build-depends:       base,
                       primes,
                       data-ordlist,
                       strict,
                       array,
                       containers,
                       split,
                       filepath,
                       petbox
  default-language:    Haskell2010
  other-modules:       Paths_ProjectEuler_Javran